responsive portfolio complete

--- a/contact.html
+++ b/contact.html
@@ -7,23 +7,28 @@
 
 <body>
 
-	<header class="header-1">
-		<h1>Laura Fleig</h1>
-	</header>
+	<div class="header-span">
 
-<div class="links">
-	<ul class="ul-1">
-  		<li class="pic-links">
-  			<a href="index.html">About</a>
-  		</li>
-  		<li class="pic-links">
-  			<a href="portfolio.html">Portfolio</a>
-  		</li>
-  		<li class="pic-links">
-  			<a href="contact.html">Contact</a>
-  		</li>
- 	</ul>
-</div>
+		<header class="header-1">
+			<h1>Laura Fleig</h1>
+		</header>
+
+		<div class="contact-links">
+			<ul class="ul-1">
+  				<li class="pic-links">
+  					<a href="index.html">About</a>
+  				</li>
+  				<li class="pic-links">
+  					<a href="portfolio.html">Portfolio</a>
+  				</li>
+  				<li class="pic-links">
+  					<a href="contact.html">Contact</a>
+  				</li>
+ 			</ul>
+		</div>
+	</div>
+
+
 
 	<div class="content">
     	
@@ -31,7 +36,7 @@
 		<div class="contact-box">
 			<h2>Contact</h2>
 
-			<hr class="first-hr">
+			<hr class="contact-hr">
 
 			<div class="form">
 				<form>
@@ -56,10 +61,11 @@
 
 			<hr class="second-hr">
 
-
-			<a href="https://github.com/lauramfleig" target="_blank"><img id="github-logo" src="./assets/images/github_icon.png"></a>
-			<a href="https://www.linkedin.com/in/laura-fleig-616822149/" target="_blank"><img id="linkedin-logo" src="./assets/images/linkedin_logo.png"></a>
-			<a href="https://stackexchange.com/users/11876241/laura-fleig" target="_blank"><img id="stack-logo" src="./assets/images/stack_logo.png"></a>
+			<div class="image-links">
+				<a href="https://github.com/lauramfleig" target="_blank"><img id="github-logo" src="./assets/images/github_icon.png"></a>
+				<a href="https://www.linkedin.com/in/laura-fleig-616822149/" target="_blank"><img id="linkedin-logo" src="./assets/images/linkedin_logo.png"></a>
+				<a href="https://stackexchange.com/users/11876241/laura-fleig" target="_blank"><img id="stack-logo" src="./assets/images/stack_logo.png"></a>
+			</div>
 		</div>
 	</div>
 
