--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
 
 <body>
 
-	<header class="header-1">
-		<h1>Laura Fleig</h1>
-	</header>
+	<div class="header-span">
 
-<div class="links">
-	<ul class="ul-1">
-  		<li class="pic-links">
-  			<a href="index.html">About</a>
-  		</li>
-  		<li class="pic-links">
-  			<a href="portfolio.html">Portfolio</a>
-  		</li>
-  		<li class="pic-links">
-  			<a href="contact.html">Contact</a>
-  		</li>
- 	</ul>
-</div>
+		<header class="header-1">
+			<h1>Laura Fleig</h1>
+		</header>
+
+		<div class="links">
+			<ul class="ul-1">
+  				<li class="pic-links">
+  					<a href="index.html">About</a>
+  				</li>
+  				<li class="pic-links">
+  					<a href="portfolio.html">Portfolio</a>
+  				</li>
+  				<li class="pic-links">
+  					<a href="contact.html">Contact</a>
+  				</li>
+ 			</ul>
+		</div>
+
+	</div>
+	
 
 	<div class="content">
     	
@@ -34,13 +39,13 @@
 			<hr class="first-hr">
 
 			<img id="bio-pic" src="./assets/images/Laura-Bio-Pic.jpg">
-				<p class="bio-paragraph">
+				<div class="bio-paragraph">
+					<p>
 					I have been waiting years to become a professional at something other than serving people their food. In fact, I could probably make a tremendous portfolio with shining customer reviews of my ability to smile even when they're misbehaving. <br> <br>
 
 					Despite my obvious love for the customer service industry, I am beyond thrilled to begin a new career in coding and web development. As a natural problem-solver, I am driven to find solutions to things that initially seem impossible. I have an eye for design, and am able to transfer my visions into reality. As a new developer, I am open to critique and willing to put energy into improving my knowledge and abilities. 
-
-
-				</p>
+					</p>
+				</div>
 		</div>
 
 		<div class="aside">
@@ -48,10 +53,11 @@
 
 			<hr class="second-hr">
 
-
-			<a href="https://github.com/lauramfleig" target="_blank"><img id="github-logo" src="./assets/images/github_icon.png"></a>
-			<a href="https://www.linkedin.com/in/laura-fleig-616822149/" target="_blank"><img id="linkedin-logo" src="./assets/images/linkedin_logo.png"></a>
-			<a href="https://stackexchange.com/users/11876241/laura-fleig" target="_blank"><img id="stack-logo" src="assets/images/stack_logo.png"></a>
+			<div class="image-links">
+				<a href="https://github.com/lauramfleig" target="_blank"><img id="github-logo" src="./assets/images/github_icon.png"></a>
+				<a href="https://www.linkedin.com/in/laura-fleig-616822149/" target="_blank"><img id="linkedin-logo" src="./assets/images/linkedin_logo.png"></a>
+				<a href="https://stackexchange.com/users/11876241/laura-fleig" target="_blank"><img id="stack-logo" src="assets/images/stack_logo.png"></a>
+			</div>		
 		</div>
 	</div>
 </body>
